2021-12-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_constructor): Generate the correct
	PVM type for the constructed array.
	* libpoke/pkl-gen.c (pkl_gen_pr_funcall): Likewise for the array
	of anys containing the varargs.
	(pkl_gen_ps_comp_stmt): Likewise for the array returned/consumed
	by the term_get_{bg}color builtins.
	* libpoke/pvm.jitter (asettb): Add an assertion to detect future
	occurrences of this problem.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (common_int_types): New variable.
	(pvm_make_integral_type_1): New function.
	(pvm_make_integral_type): Rewrite to cache integral types.
	(pvm_val_initialize): Initialize common integral types and
	register GC roots for them.
	(pvm_val_finalize): De-register GC roots for common integral
	types.
	* libpoke/pvm.c (pvm_shutdown): Call pvm_val_finalize not
	pvm_val_initialize!

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.c (pvm_shutdown): Call pvm_val_finalize instead of
	pvm_val_initialize.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_array_set): Avoid calculating the size of
	the remaining elements of the array.

2021-11-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.c (pkl_type_append_to): Generate syntactically
	correct types for functions.
	* libpoke/pkl-typify.c (pkl_typify1_ps_funcall): Clarify error
	message.

2021-09-17  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/poke.map/ass-map-21.pk: New test.
	* testsuite/poke.map/ass-map-22.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-09-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pk-val.c: Include `assert.h`.
	(pk_val_offset): Use `PVM_VAL_MAPPED_P` instead
	of checking `PVM_VAL_OFFSET` against `PVM_NULL`.

2021-09-16  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>

	* doc/poke.texi (Poking a SBM Image): Fix typo.

2021-09-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
